--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     }
   },
   "dependencies": {
-	"express": "4.13.4",
+    "aws-iot-device-sdk": "^1.0.12",
+    "express": "4.13.4",
     "is-utf8": "^0.2.1",
     "mqtt": "^1.10.0",
     "node-red": "^0.13.4",
